--- a/U.A.C_Case.html
+++ b/U.A.C_Case.html
@@ -14,7 +14,7 @@
 		<nav>
 			<ul>
 				<li><a href="U.A.C_Index.html" class="button">Main Page</a></li>
-				<li><a href="U.A.C_Storefront.html" class="button">Store Front</a></li>
+				<li><a href="U.A.C_Storefront.html" class="button">PC Builder</a></li>
 				<li><a href="U.A.C_Contact.html" class="button">Contact Info</a></li>
 			</ul>
 		</nav>
