--- a/U.A.C_Contact.html
+++ b/U.A.C_Contact.html
@@ -14,7 +14,7 @@
 		<nav>
 			<ul>
 				<li><a href="U.A.C_Index.html" class="button">Main Page</a></li>
-				<li><a href="U.A.C_Storefront.html" class="button">Store Front</a></li>
+				<li><a href="U.A.C_Storefront.html" class="button">PC Builder</a></li>
 				<li><a href="U.A.C_Contact.html" class="button">Contact Info</a></li>
 			</ul>
 		</nav>
@@ -31,7 +31,7 @@
 		<section id ="Web-Form">
 			<h2>Order Submission</h2>
 			<p>Please fill out the form below to submit/request a work order; afterwards please wait 1~24 hours for a response.<br>
-			<br>We at U.A.C would like to thank your for your business.<p>
+			<br>We at U.A.C would like to thank you for your business.<p>
 			<span>Unless requested otherwise, the company standard cooling fans will be installed into any ordered PC if we do not recieve a email with a request.<span>
 			<form action="">
 				<label for="Name">First and last name:</label><br>
